# sdm

./: .gitignore  .hgignore  .rsyncignore  Makefile  Makefile.am  README.md  TODO  To do Marcelo.txt  autogen.sh  configure  configure.ac  test_memory  test_memory.c  test_memory_thread.c  test_write  test_write.c
output/: chart.py  out0.txt  out0_value.txt  out1.txt  out1_value.txt
pyopenCL_Tests/: 2copy_if.py  GPU_Code_OpenCLv1_2.cl  SDM_OpenCL_7Jun14_Copy_If.py  SDM_OpenCL_get_active_locations.py  copy_if.py  test_copy_if.py
python/: HLs_as_Pointers.py  TODO  bigmacTests.py  iMac27_HL_hexbin.py  imac27tests.py  sdm.py  sdm_utils.py  test_100_timer.py  test_bitstring.py  test_hardlocation.py  test_memory.py  tests.py
sdm/: bitstring.c  bitstring.h  common.h  hardlocation.c  hardlocation.h  memory.c  memory.h  memory_opencl.c  memory_opencl_program.cl  memory_thread.c  memory_thread.h
src/: common.h  hardlocation.c  main.c  memory.c  memory_opencl_program.cl  memory_thread.c  memory_thread.h
src/core/: bitstring.c  common.h  hardlocation.h  memory.c  memory.h  memory_thread.c  memory_thread.h
src/tests/: test_memory.c  test_write.c
